buildscript {
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath("io.spring.javaformat:spring-javaformat-gradle-plugin:0.0.41")
	}
}

plugins {
	id 'org.springframework.boot' version '3.2.5'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'java'
}

apply plugin: 'io.spring.javaformat'

group = 'io.spring.renderer'
version = "1.0.0-SNAPSHOT"
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

bootJar {
	requiresUnpack '**/jruby-complete-*.jar'
	requiresUnpack '**/asciidoctorj-*.jar'
}

dependencies {
	implementation('org.asciidoctor:asciidoctorj:2.5.12') {
		exclude group: 'org.jruby'
	}
	implementation 'org.jruby:jruby-complete:9.4.6.0'
	implementation 'org.jsoup:jsoup:1.17.1'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'com.azure.spring:spring-cloud-azure-starter-keyvault-secrets'
	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
}

dependencyManagement {
	imports {
		mavenBom "com.azure.spring:spring-cloud-azure-dependencies:5.11.0"
	}
}

test {
	useJUnitPlatform()
}

